--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,11 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+"ignore": [
+  ".git",
+  ".runtimeconfig.json",
+  "firebase-debug.log",
+  "firebase-debug.*.log",
+  "node_modules"
+]
